# moviedb

./: .gitignore  LICENSE  README.md  data.json  demo.py  setup.cfg  setup.py  test-load.json
moviedb/: __init__.py  __main__.py  annotations.py  database.py  menu.py
moviedb/tests/: test_database.py
