[metadata]
name = moviedb
version = 0.1.0
url = https://github.com/peterkovalets/moviedb
author = Peter Kovalets
author_email = peterkovalets@proton.me
description = База данных, для хранения фильмов
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = python, database, movies
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Database

[options]
packages = find:
install_requires =
python_requires = >=3.6

[options.packages.find]
exclude =
    moviedb.tests*
